--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Guardian</title>
-    <link rel="stylesheet" href="css/main_style.css">
+    <link rel="shortcut icon" href="./images/Logosolar.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/index_style.css">
 </head>
+
 <body>
     <header class="Topbar">
         <div class="logo">
-            <img src="images/Logosolar.png" alt="Solar Guardian Logo">
+            <img src="./images/Logosolar.png" alt="Solar Guardian Logo">
             <div class="logo-text">
-                <h2>Solar Guardian</h2>
-                <p>Welcome to Solar Guardian</p>
+                <a href="#">
+                    <h2 style="text-underline-position: none;">Solar Guardian</h2>
+                    <p>Welcome to Solar Guardian</p>
+                </a>
             </div>
         </div>
         <div class="hamburger" onclick="toggleSidebar()">☰</div>
         <div class="user-info">
-            <button class="user-info-btn" onclick="toggleUserInfo()">👤 Used by: <strong>Th, Na, Ju, No</strong></button>
+            <button class="user-info-btn" onclick="toggleUserInfo()">👤 Used by: <strong>Th, Na, Ju,
+                    No</strong></button>
             <div class="dropdown-content" id="dropdown-content">
                 <ul>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Settings</a></li>
                     <li><a href="#">Logout</a></li>
                 </ul>
             </div>
@@ -29,13 +33,19 @@
     </header>
 
     <div class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h3>Menu</h3>
-        </div>
         <ul class="sidebar-links">
             <li><a href="#">Show Status</a></li>
-            <li><a href="#">Add Device</a></li>
-            <li><a href="#">Add User</a></li>
+            <li>
+                <div class="select-container">
+                    <select>
+                        <option value="Select">Select Device</option>
+                        <option value="AddUser">Add User</option>
+                        <option value="EditUser">Edit User</option>
+                        <option value="AddDevice">Add Device</option>
+                        <option value="EditDevice">Edit Device</option>
+                    </select>
+                </div>
+            </li>
             <li><a href="#">History</a></li>
         </ul>
     </div>
@@ -69,4 +79,5 @@
         }
     </script>
 </body>
+
 </html>
