--- a/showstatus.html
+++ b/showstatus.html
@@ -22,10 +22,15 @@
          <div class="chart-container">
             <p>(พื้นที่สำหรับกราฟ)</p>
         </div>
-        <button class="On-button">Turn on the system</button>
-        <button class="Off-button">Turn off the system</button>
-        <button class="cleanStop-button">Stop Cleaning the system</button>
-        <button class="clean-button">Order Cleaning the system</button>
+        <section>
+            <label for="toggle-1" class="toggle-1">
+                <input type="checkbox" name="toggle-1" id="toggle-1" class="toggle-1__input">
+                <span class="toggle-1__button"></span>
+            </label>
+        </section>
+        <br>
+        <button class="Order-button">Start Cleaning </button>
+        <button class="cleanStop-button">Stop Cleaning </button>
     </div>
 </body>
 </html>
