--- a/Cleaning_history.html
+++ b/Cleaning_history.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cleaning history</title>
+    <title>Cleaning History</title>
     <link rel="stylesheet" href="./css/Cleaning_history_style.css">
 </head>
 <body>
+    <div class="selection-container">
+        <select>
+            <option value="option">Cleaning history</option>
+            <option value="option">View history data</option>
+            <option value="option">AI prediction</option>
+        </select>
+    </div>
 
-<div class="container">
-    <h2>Cleaning history</h2>
     <div class="history-table">
         <table>
             <thead>
@@ -23,11 +28,10 @@
                     <td><input type="date"></td>
                     <td><input type="date"></td>
                 </tr>
-                <!-- สามารถเพิ่มแถวข้อมูลได้ที่นี่ -->
             </tbody>
         </table>
     </div>
+
     <button class="save-button">Show Data</button>
-</div>
 </body>
 </html>
